# Qa_guru_9.18HW

./: pyproject.toml
